Fix look on mobile

--- a/src/styles/errorPage.css
+++ b/src/styles/errorPage.css
@@ -7,6 +7,7 @@
     align-items: center;
     padding: 0 2rem;
     gap: 2rem;
+    text-align: center;
 }
 
 .error-main > p {
